--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,10 @@
 @layer reset, init, design;
 
-@import url("normalize.css");
+@import url("normalize.css") layer(reset);
 
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap') layer(init);
 
-@layer design{
+@layer init{
     :root{
         color-scheme: light dark; /* Enable dark mode based on user preference. !light is main! */
         --header-bg-color: light-dark(#3b3e40, #3b3e40);
@@ -18,26 +18,84 @@
         font-size: 100%; /*defaut 16px */
         color: var(--text-color);
     }
+
+}
+
+@layer design {
     body{
         background-color: var(--bg-color);
         margin: 0;
     }
+    main{
+        padding: 1rem;
+        margin: 0 auto;
+        max-width: 960px;
+
+    }
+    h1{
+        font-size: 4rem;
+        font-weight: 800;
+    }
+
     .header{
         background-image: url("../images/header-2560w.webp");
         background-size: cover;
         background-position: top left;
-        background-repeat: no-repeat;
         background-color: var(--header-bg-color);
         color: var(--header-text-color);
         line-height: 1.5;
+        padding: 1em;
     }
     .header__nav{
         text-align: center;
     }
     .header__link{
-        display: inline-block;
+    
+    }
+    .header__intro{
+        margin-top: 10vh;
+    }
+    .img-block{
+        margin: 0.5em 0 0;
         text-align: center;
-        padding-top: 1em;
+
+    }
+    .img-fluid{
+        display: block;
+        width: 100%;
+        height: auto;
+
+    }
+    .button{
+        display: inline-block;
+        border-radius: .5rem;
+        padding: 0.75em 2em;
+        text-decoration: none;
+        
+    }
+    .button--light:hover{
+        background-color: #ffffffe8;
+    }
+    .button--light{
+        background-color: var(--secondary-color);
+        color: var(--text-color);
+    }
+    .text-box{
+        padding: 1rem;
+    }
+    .text-box__title{
+    }
+    .heading{
+        font: "Open Sans";
+        display: block;
+    }
+    .heading__h3{
+        font-weight: 700;
+        font-style: Bold;
+        font-size: 1.25rem;
+        line-height: 125%;
+        letter-spacing: 0%;
+        
     }
 
 }
